package edu.hitsz.bullet;

import edu.hitsz.application.ImageManager;

import java.awt.image.BufferedImage;

/**
 * 敌机子弹
 * @Author hitsz
 */
public class EnemyBullet extends BaseBullet {

    public EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power) {
        super(locationX, locationY, speedX, speedY, power);
    }

}
