@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}
AbstractAircraft <|-- MobEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EliteEnemy{
    # power : int
    # direction : int
    # shootNum : int
    + EliteEnemy(int locationX, int locationY,
    int speedX, int speedY, int hp)
    + shoot : List<BaseBullet>
}
MobEnemy <|-- EliteEnemy

class ElitePlusEnemy{
    + ElitePlusEnemy(int locationX, int locationY,
    int speedX, int speedY, int hp)
}
EliteEnemy <|-- ElitePlusEnemy

class EliteProEnemy{
    + EliteProEnemy(int locationX, int locationY,
    int speedX, int speedY, int hp)
}
EliteEnemy <|-- EliteProEnemy

class BossEnemy{
    + BossEnemy(int locationX, int locationY, int speedX,
    int speedY, int hp)
}
EliteEnemy <|-- BossEnemy

class AbstractProp{
    + AbstractProp(int locationX, int locationY,
    int speedX, int speedY)
    + forward() : void
}
AbstractFlyingObject <|-- AbstractProp

class PropBlood{
    + PropBlood(int locationX, int locationY,
    int speedX, int speedY)
}
AbstractProp <|-- PropBlood

class PropBomb{
    + PropBomb(int locationX, int locationY,
    int speedX, int speedY)
}
AbstractProp <|-- PropBomb

class PropBullet{
    + PropBullet(int locationX, int locationY,
    int speedX, int speedY)
}
AbstractProp <|-- PropBullet

class PropBulletPlus{
    + PropBulletPlus(int locationX, int locationY,
    int speedX, int speedY)
}
AbstractProp <|-- PropBulletPlus

class PropFreeze{
    + PropFreeze(int locationX, int locationY,
    int speedX, int speedY)
}
AbstractProp <|-- PropFreeze


BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

@enduml